test/kuttl/tests/update-openstacklightspeed/11-assert-openstacklightspeed-update.yaml
# Postgres resources
---
apiVersion: v1
kind: Service
metadata:
  name: lightspeed-postgres-server
  namespace: openstack-lightspeed
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lightspeed-postgres-server
  namespace: openstack-lightspeed
status:
  replicas: 1
  readyReplicas: 1
  availableReplicas: 1
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lightspeed-postgres-server
  namespace: openstack-lightspeed

# LCore resources
---
apiVersion: v1
kind: Service
metadata:
  name: lightspeed-app-server
  namespace: openstack-lightspeed
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lightspeed-stack-deployment
  namespace: openstack-lightspeed
  generation: 2
spec:
  template:
    spec:
      containers:
        - name: llama-stack
        - name: lightspeed-service-api
status:
  replicas: 1
  readyReplicas: 1
  availableReplicas: 1
  observedGeneration: 2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lightspeed-app-server
  namespace: openstack-lightspeed

# OpenStackLightspeed CR status
